# waxedit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
res/Shaders/: TextRenderer.fs  TextRenderer.vs
src/: App.cpp  App.h  FontRaster.cpp  FontRaster.h  FontRasterizationResult.h  IFontRaster.h  Mesh.cpp  Mesh.h  TextRenderer.cpp  TextRenderer.h  Window.cpp  Window.h  main.cpp
src/Renderer/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  TextBatch.cpp  TextBatch.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/Renderer/OpenGL/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
src/Rendering/: FontRaster.cpp  FontRaster.h  FontRasterizationResult.h  GlyphBuffer.cpp  GlyphBuffer.h  IFontRaster.h  TextBatch.cpp  TextBatch.h  TextBatchManager.cpp  TextBatchManager.h  TextBuffer.cpp  TextBuffer.h  TextBufferQueue.h  TextRenderer.cpp  TextRenderer.h  freetype.h
